--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,7 +1,7 @@
 .footer__columns {
     display: flex;
     justify-content: space-between;
-    margin: 0;
+    margin: 92px 48px 24px;
     padding: 0;
     color: #FFFFFF;
 }
