--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,8 +1,8 @@
 .footer__columns {
     display: flex;
     justify-content: space-between;
-    margin: 92px 48px 24px;
-    padding: 0;
+    margin: 0;
+    padding: 92px 48px 24px;
     color: #FFFFFF;
 }
 
