--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -16,3 +16,12 @@
     font-weight: bold;
 }
 
+
+@font-face {
+    src: 
+        url(../fonts/Inter-Black.woff2) format("woff2"),
+        url(../fonts/Inter-Black.woff) format("woff");
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+}
