--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,13 +1,15 @@
 .cover__background {
+    display: flex;
+    flex-direction: column;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
     max-width: 1184px;
     height: 740px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
     text-align: center;
+    align-items: center;
     text-decoration: none;
     position: relative;
 }
