--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,16 @@
 .cover__subtitle {
     max-width: 360px;
-    min-height: 66px;
     font-family: 'Inter' , 'Arial', 'sans-serif';
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    text-align: center;
-    margin: 32px 412px 245px;
     color: #FFFFFF;
     position: relative;
+    margin: 0 auto;
     z-index: 1;
 }
-
+/*
 @media screen and (max-width:1024px) {
     .cover__subtitle {
         margin: 32px 332px 195px;
@@ -25,13 +23,10 @@
         margin: 32px 204px 115px;
     }
 }
-
+*/
 @media screen and (max-width:320px) {
     .cover__subtitle {
-        margin: 16px 16px 33px;
-        max-width: 288px;
         font-size: 14px;
         line-height: 16px;
-        
     }
 }
