--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,31 +5,17 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    margin: 245px 312px 0px;
     color: #FFFFFF;
     position: relative;
     z-index: 1;
+    margin: 0 0 32px 0;
+    padding: 0;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:425px) {
     .cover__title {
-        margin: 195px 232px 0px;
-    }
-}
-
-
-@media screen and (max-width:768px) {
-    .cover__title {
-        margin: 115px 104px 0px;
-    }
-}
-
-@media screen and (max-width:320px) {
-    .cover__title {
-        margin: 33px 16px 0px;
         max-width: 288px;
         font-size: 32px;
         line-height: 35px;
-        
     }
 }
