--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,27 +1,14 @@
 .lead__image {
-    width: 984px;
+    max-width: 984px;
     height: 615px;
     margin: auto;
     padding: 0;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
-        width: 928px;
-        height: 580px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .lead__image {
-        width: 768px;
-        height: 480px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .lead__image {
-        width: 320px;
-        height: 200px;
+        width: 100%;
+        height: auto;
     }
 }
