--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,12 +7,18 @@
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
-    /* or 104% */
     text-align: center;
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 768px){
+    .lead__title {
+        font-size: 50px;
+        line-height: 44px;
+    }
+}
+
+@media screen and (max-width: 425px){
     .lead__title {
         padding: 0px 0px 16px;
         max-width: 288px;
