--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,18 +6,18 @@
 
 @media screen and (max-width: 1024px){
     .lead{
-        max-width: 928px;
+        width: calc(100% - 2*48px);
     }
 }
 
 @media screen and (max-width: 768px){
     .lead{
-        max-width: 768px;
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 320px){
     .lead{
-        max-width: 320px;
+        width: 100%;
     }
 }
