--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,23 +9,21 @@
 
 @media screen and (max-width: 1024px){
     .photo-grid {
-        max-width: 928px;
+        width: calc(100% - 2*24px);
         gap: 14px;
+        padding: 0;
     }
 }
 
 @media screen and (max-width: 768px){
     .photo-grid {
-        max-width: 720px;
         gap: 16px;
-        padding: 0 24px;
     }
 }
 
 @media screen and (max-width: 320px){
     .photo-grid {
-        max-width: 288px;
+        width: calc(100% - 2*16px);
         gap: 12px;
-        padding: 0 16px;
     }
 }
