--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
     max-width: 460px;
     font-family: 'Inter' , 'Arial', 'sans-serif';
     font-style: normal;
-    font-weight: 900;
+    font-weight: bold;
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
