--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place{
     max-width: 984px;
     display: grid;
-    grid-template-columns: 460px auto;
+    grid-template-columns: 460px 484px;
     padding: 0;
     margin: 0 0 80px;
     row-gap: 48px;
@@ -15,30 +15,43 @@
 @media screen and (max-width: 1024px){
     .place {
         max-width: 928px;
-        grid-template-columns: 440px auto;
+        grid-template-columns: 440px 456px;
         column-gap: 32px;
     }
 }
 
+@media screen and (max-width: 946px){
+    .place {
+        grid-template-columns: 440px 360px;
+    }
+}
+
+@media screen and (max-width: 850px){
+    .place {
+        grid-template-columns: 380px 340px;
+    }
+}
+
+
 @media screen and (max-width: 768px){
     .place {
         max-width: 720px;
-        grid-template-columns: 340px auto;
+        grid-template-columns: 340px 290px;
         column-gap: 28px;
         margin: 0 0 72px;
     }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 679px){
     .place {
         max-width: 320px;
         display: flex;
         flex-direction: column;
-        margin: 0 0 50px;
+        margin: 0 auto 50px;
         row-gap: 32px;
     }
 
     .place:last-child {
-        margin: 0 0 66px;
+        margin: 0px auto 0;
     }
 }
