--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
+    background-position: center;
     max-width: 1184px;
-    height: 740px;
+    min-height: 740px;
     margin: 0;
     padding: 0;
     justify-content: center;
@@ -34,7 +35,7 @@
 @media screen and (max-width:1024px) {
     .cover__background {
         max-width: 1024px;
-        height: 640px;
+        min-height: 640px;
     }
 }
 
@@ -42,13 +43,13 @@
 @media screen and (max-width:768px) {
     .cover__background {
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width:320px) {
     .cover__background {
         max-width: 320px;
-        height: 200px;
+        min-height: 200px;
     }
 }
