--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -4,11 +4,20 @@
     margin: 0 auto;
     padding: 92px 0px 24px;
     color: #FFFFFF;
+    align-items: center;
 }
+
+@media screen and (max-width:768px) {
+    .footer__columns {
+        padding: 88px 0px 24px;
+    }
+}
+
 
 
 @media screen and (max-width:320px) {
     .footer__columns {
         flex-direction: column;
+        padding: 64px 0px 24px;
     }
 }
