--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,11 @@
     font-family: 'Inter' , 'Arial', 'sans-serif';
     font-size: 16px;
     line-height: 18px;
+    transition: 0.3s;
+}
+
+.footer__link:hover {
+    opacity: 0.8;
 }
 
 
