--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,20 @@
 .footer {
     max-width: 1184px;
-    margin: auto;
-    padding: 0;
+    margin: 0px auto 0px;
+    padding: 0 48px;
 }
 
 @media screen and (max-width:1024px) {
     .footer {
-        max-width: 928px;
+        width: calc(100% - 2*48px);
     }
 }
 
 
 @media screen and (max-width:768px) {
     .footer {
-        margin: 0px 24px 0px;
-        max-width: 720px;
+        width: calc(100% - 2*24px);
+        padding: 0;
     }
 }
 
