--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,11 @@
 .header__lang-link {
     color: #FFFFFF;
-    margin: 0px 18px 0px 0px;
+    margin: 0 0 0 18px;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
