--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,6 +3,7 @@
     display: flex;
     margin: 0 442px 92px 148px;
     padding: 0;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 1024px){
