--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,7 +7,11 @@
     line-height: 163%;
     color: #FFFFFF;
     margin: 0;
-    padding: 0 16px 26px 0;
+    padding: 0 0 27px 0;
+}
+
+.place__paragraph:last-child {
+    padding: 0;
 }
 
 @media screen and (max-width: 1024px){
@@ -21,14 +25,14 @@
     .place__paragraph {
         max-width: 352px;
         font-size: 16px;
+        line-height: 26px;
+        padding: 0 0 25px 0;
     }
 }
 
 @media screen and (max-width: 320px){
     .place__paragraph {
         max-width: 288px;
-        font-size: 16px;
-        line-height: 26px;
         padding: 0 16px 25px;
     }
 
