--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,9 +4,10 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
+    text-transform: uppercase;
     line-height: 12px;
     letter-spacing: 0.2em;
     color: #AAAAAA;
-    margin: 0;
+    margin: 0 0 12px 0;
     padding: 0;
 }
