--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,9 +3,10 @@
     display: grid;
     grid-template-columns: 460px 484px;
     padding: 0;
-    margin: 0 0 80px;
+    margin: 0 auto 80px;
     row-gap: 48px;
     column-gap: 40px;
+    justify-content: center;
 }
 
 .place:last-child {
@@ -36,9 +37,17 @@
 @media screen and (max-width: 768px){
     .place {
         max-width: 720px;
-        grid-template-columns: 340px 290px;
+        grid-template-columns: 340px 352px;
         column-gap: 28px;
-        margin: 0 0 72px;
+        margin: 0 auto 72px;
+    }
+}
+
+
+@media screen and (max-width: 740px){
+    .place {
+        max-width: 680px;
+        grid-template-columns: 300px 300px;
     }
 }
 
