--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,11 +6,12 @@
     line-height: 16px;
     text-align: right;
     color: #FFFFFF;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 320px){
     .footer__copyright {
-        line-height: 16px;
-        text-align: left;
+        line-height: 14px;
     }
 }
