--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,8 @@
     padding: 0;
     margin: 0 18px 0 0;
     font-family: 'Inter' , 'Arial', 'sans-serif';
+    font-style: normal;
+    font-weight: normal;
     font-size: 16px;
     line-height: 18px;
     transition: 0.3s;
@@ -17,6 +19,8 @@
 
 @media screen and (max-width:320px) {
     .footer__link {
-        margin: 0 0 32px 0;
+        max-width: 74px;
+        font-size: 24px;
+        line-height: 24px;
     }
 }
