--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,8 +21,6 @@
 @media screen and (max-width:320px) {
     .footer {
         max-width: 186px;
-        font-size: 14px;
-        line-height: 16px;
-        
+        margin: 0px 118px 0px 16px;
     }
 }
